tests/test_assets/semantic/invalid/expressions/bitwise_operand_types.expected
semantic error at line 18: unary '~' requires integer operand
semantic error at line 19: unary '~' requires integer operand
semantic error at line 20: unary '~' requires integer operand
semantic error at line 21: unary '~' requires integer operand
semantic error at line 22: unary '~' requires integer operand
semantic error at line 24: right operand of bitwise operator must be integer
semantic error at line 25: left operand of bitwise operator must be integer
semantic error at line 26: left operand of bitwise operator must be integer
semantic error at line 27: left operand of bitwise operator must be integer
semantic error at line 28: left operand of bitwise operator must be integer
semantic error at line 29: left operand of bitwise operator must be integer
semantic error at line 30: left operand of bitwise operator must be integer
12 semantic errors generated.
